<resources>
    <string name="app_name">Calcualtion_project</string>
    <string name="EditText1">버튼을 눌러 수를 입력해주세요!</string>
    <string name="Add">+</string>
    <string name="Sub">-</string>
    <string name="Mul">X</string>
    <string name="Div">/</string>
    <string name="Dot">.</string>
    <string name="Back">←</string>
    <string name="Result">=</string>
    <string name="Reset">Reset</string>
    <string name="Num0">0</string>
    <string name="Num1">1</string>
    <string name="Num2">2</string>
    <string name="Num3">3</string>
    <string name="Num4">4</string>
    <string name="Num5">5</string>
    <string name="Num6">6</string>
    <string name="Num7">7</string>
    <string name="Num8">8</string>
    <string name="Num9">9</string>
</resources>