<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

    <EditText
            android:id="@+id/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60px"
            android:singleLine="true"
            android:enabled="false"
            android:hint="@string/EditText1"/>

    <EditText
            android:id="@+id/EditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60px"
            android:singleLine="true"
            android:enabled="false"
            android:hint="정답"/>


    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="4">

        <Button
                android:id="@+id/Button1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num1"/>

        <Button
                android:id="@+id/Button2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num2"/>

        <Button
                android:id="@+id/Button3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num3"/>

        <Button
                android:id="@+id/Add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Add"/>

        <Button
                android:id="@+id/Button4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num4"/>

        <Button
                android:id="@+id/Button5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num5"/>

        <Button
                android:id="@+id/Button6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num6"/>

        <Button
                android:id="@+id/Sub"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Sub"/>

        <Button
                android:id="@+id/Button7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num7"/>

        <Button
                android:id="@+id/Button8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num8"/>

        <Button
                android:id="@+id/Button9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num9"/>

        <Button
                android:id="@+id/Mul"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Mul"/>

        <Button
                android:id="@+id/Back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Back"/>

        <Button
                android:id="@+id/Button0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Num0"/>

        <Button
                android:id="@+id/Result"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Result"/>

        <Button
                android:id="@+id/Div"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="3dp"
                android:textSize="45dp"
                android:text="@string/Div"/>
    </GridLayout>
    <Button
            android:id="@+id/Reset"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="45dp"
            android:text="@string/Reset"/>
</LinearLayout>
